--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -143,6 +143,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-bottom: 0px !important;
 }
 
+.remove-marginbottom {
+    margin: 0px !important;
+}
+
 .pad-left65px {
     padding-left: 65px;
 }
@@ -163,12 +167,21 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-top: 5px !important;
 }
 
+.pad-top10px {
+    padding-top: 10px !important;
+}
+
+
 .pad-top20px {
     padding-top: 20px !important;
 }
 
 .pad-bot10px {
     padding-bottom: 10px;
+}
+
+.pad-bot30px {
+    padding-bottom: 30px;
 }
 
 .pad-top85px {
@@ -207,8 +220,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-bottom: 10px;
 }
 
+.mar-bottom20px {
+    margin-bottom: 20px;
+}
+
 .mar-top25px {
     margin-top: 25px;
+}
+
+.mar-top40px {
+    margin-top: 40px;
 }
 
 .mar-top10px {
@@ -260,6 +281,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .service-banner {
     background-image: url(../Content/images/ServiceBanner.jpg);
+}
+
+.work-banner {
+    background-image: url(../Content/images/smiling-young-businessman.jpg);
 }
 
 .homepage-title-service {
@@ -933,14 +958,69 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #006190 !important;
 }
 
-.service-search-container .search-criteria .text-search {
+.service-search-container .search-criteria .text-search,
+.service-search-container .work-search-criteria .text-search {
     display: unset;
     width: 90%;
 }
 
-.service-search-container .search-criteria .btn-search {
+.service-search-container .search-criteria .btn-search,
+.service-search-container .work-search-criteria .btn-search {
     background-color: #dca447;
     border: none;
+}
+
+.work-search-container .search-criteria {
+    top: 628px;
+    border-radius: 4px 4px 0px 0px;
+    border-bottom: none;
+}
+
+.work-search-container .work-logo {
+    width: 100%;
+    height: 750px;
+}
+
+.work-search-container .work-detail-title {
+    font-size: 15px;
+    font-size: 22px;
+}
+
+.work-search-container .search-result i {
+    font-size: 20px;
+    color: #96dbff;
+    width: 25px;
+}
+
+.work-search-container .search-result .work-ads {
+    position: sticky;
+    top: 0px;
+}
+
+    .work-search-container .search-result .work-ads img {
+        height: 350px;
+        width: 100%;
+    }
+
+.work-search-container .work-item-detail {
+    box-shadow: 5px 10px 18px #888888;
+    border-radius: 5px;
+}
+
+.work-grey-bk {
+    background-color: #cac0c026;
+}
+
+.work-while-bk {
+    background-color: #FFFFFF;
+}
+
+#btnWorkDetail {
+    background: #FFFFFF;
+    border: 1px #f7d8d8 solid;
+    padding: 4px 25px;
+    border-radius: 4px;
+    font-weight: 600;
 }
 
 .btn-view-all-services {
@@ -995,6 +1075,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .suppor-already-title-sec {
     font-size: 14px;
     color: #ccc;
+}
+
+.work-detail-img {
+    height: 235px;
 }
 
 .btn-call-support {
@@ -1063,6 +1147,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #3e3939;
 }
 
+.work-search-container .work-search-criteria {
+    background-color: #FFFFFF;
+    margin-top: -140px;
+    padding: 10px;
+}
+
 .works-form-footer hr {
     width: 91%;
 }
@@ -1112,6 +1202,44 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-size: 16px;
     cursor: pointer;
     border: 1px solid #ccc;
+}
+
+.plane-ads-bg {
+    background-image: url(../Content/images/plane-bg.jpg);
+    background-position-x: right;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: 70%;
+}
+
+    .plane-ads-bg img {
+        width: 480px;
+    }
+
+    .plane-ads-bg .first-line {
+        color: #FFFFFF;
+        padding-top: 30px;
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+    .plane-ads-bg .second-line span:first-child {
+        color: #FFFFFF;
+        padding-top: 30px;
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+    .plane-ads-bg .second-line span:nth-child(2) {
+        color: #ed2025;
+        padding-top: 30px;
+        font-size: 40px;
+        font-weight: 600;
+    }
+
+.search-result .pagination {
+    display: flex;
+    justify-content: center;
 }
 /* Support for client - BEGIN */
 table.text-editor-supported {
