--- a/ImmiCanada/Views/Shared/_Layout.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout.cshtml
@@ -226,7 +226,7 @@
                             </div>
                         </div>*@
                 </div>
-                <div class="menu-item"><a href="#">VIỆC LÀM</a></div>
+                <div class="menu-item"><a href="/viec-lam-canada">VIỆC LÀM</a></div>
                 <div class="menu-item"><a href="#">TẠI SAO CHỌN CHÚNG TÔI</a></div>
                 <div class="menu-item"><a href="#">BẢN TIN NHẬP CƯ</a></div>
                 <div class="menu-item"><a href="#">ĐÁNH GIÁ MIỄN PHÍ</a></div>
