--- a/ImmiCanada/Views/Shared/_Layout_Without_Banner.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout_Without_Banner.cshtml
@@ -197,7 +197,7 @@
                     <a href="#divImmigrationService" for="divImmigrationService" data-toggle="collapse"
                        aria-controls="divImmigrationService" aria-expanded="false" class="collapsed">DỊCH VỤ NHẬP CƯ</a>
                 </div>
-                <div class="menu-item"><a href="#">VIỆC LÀM</a></div>
+                <div class="menu-item"><a href="/viec-lam-canada">VIỆC LÀM</a></div>
                 <div class="menu-item"><a href="#">TẠI SAO CHỌN CHÚNG TÔI</a></div>
                 <div class="menu-item"><a href="#">BẢN TIN NHẬP CƯ</a></div>
                 <div class="menu-item"><a href="#">ĐÁNH GIÁ MIỄN PHÍ</a></div>
