--- a/ImmiCanada/Views/WorkInterface/Detail.cshtml
+++ b/ImmiCanada/Views/WorkInterface/Detail.cshtml
@@ -3,7 +3,40 @@
 
     ViewBag.Title = "Chi Tiết việc làm";
     Layout = "~/Views/Shared/_Layout_Without_Banner.cshtml";
-}
+    string GetServiceDetailUrl()
+    {
+        if (Model.ImmigrationService.Title == "Non-Available")
+        {
+            return convertToUnSign2("/viec-lam-canada/work-permit");
+        }
+        else
+        {
+            return convertToUnSign2(string.Format("/dich-vu/tinh-bang-{0}/{1}/{2}", Model.ImmigrationService.State1.Name.ToLower().Replace(" ", "-"), Model.ImmigrationService.Title.ToLower().Replace(" ", "-"), Model.ImmigrationService.Id));
+        }
+    }
+
+    string convertToUnSign2(string s)
+    {
+        string stFormD = s.Normalize(System.Text.NormalizationForm.FormD);
+        System.Text.StringBuilder sb = new System.Text.StringBuilder();
+        for (int ich = 0; ich < stFormD.Length; ich++)
+        {
+            System.Globalization.UnicodeCategory uc = System.Globalization.CharUnicodeInfo.GetUnicodeCategory(stFormD[ich]);
+            if (uc != System.Globalization.UnicodeCategory.NonSpacingMark)
+            {
+                sb.Append(stFormD[ich]);
+            }
+        }
+        sb = sb.Replace('Đ', 'D');
+        sb = sb.Replace('đ', 'd');
+        return (sb.ToString().Normalize(System.Text.NormalizationForm.FormD));
+    }
+
+    string GetDetailUrl(ImmiCanada.Entities.ImmigrationService service)
+    {
+        return convertToUnSign2(string.Format("/dich-vu/tinh-bang-{0}/{1}/{2}", service.State1.Name.ToLower().Replace(" ", "-"), service.Title.ToLower().Replace(" ", "-"), service.Id));
+    }
+        }
 <style>
     .row {
         margin-right: 0;
@@ -22,7 +55,7 @@
         <div class="row">
             <div class="col-sm-12 pad-top20px">
                 <button class="btn-work"><i class="fa fa-share" aria-hidden="true"></i>&nbsp;Chia sẻ</button>
-                <button class="btn-work"><i class="fa fa-star-o" aria-hidden="true"></i>&nbsp;@Model.ImmigrationService.Title</button>
+                <button class="btn-work" onclick="javascript: window.location.href='@GetServiceDetailUrl()'"><i class="fa fa-star-o" aria-hidden="true"></i>&nbsp;@(Model.ImmigrationService.Title == "Non-Available" ? "Work Permit" : Model.ImmigrationService.Title)</button>
             </div>
         </div>
         <div class="row">
