--- a/ImmiCanada/Content/carousel.css
+++ b/ImmiCanada/Content/carousel.css
@@ -105,15 +105,15 @@
 /* LG */
 @media (min-width: 991px) {
     /* show 4th item */
-    .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
+    #NewsSlide .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
         display: block;
     }
 
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
+    #NewsSlide .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
         transition: none;
     }
     /* Show 5th slide on lg if col-lg-3 */
-    .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    #NewsSlide .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: absolute;
         top: 0;
         right: -25%; /*change this with javascript in the future*/
@@ -122,19 +122,86 @@
         visibility: visible;
     }
     /* left or forward direction */
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    #NewsSlide .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: relative;
         transform: translate3d(-100%, 0, 0);
         visibility: visible;
     }
     /* right or prev direction //t - previous slide direction last item animation fix */
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    #NewsSlide .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: relative;
         transform: translate3d(100%, 0, 0);
         visibility: visible;
         display: block;
         visibility: visible;
     }
+
+    /*Custom form 3 Item*/
+    /* show 4th item */
+    .carousel-custom .carousel-inner .active + .carousel-item + .carousel-item {
+        display: block;
+    }
+
+    .carousel-custom .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+        transition: none;
+    }
+    /* Show 5th slide on lg if col-lg-4 */
+    .carousel-custom .carousel-inner .active.col-lg-4.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+        position: absolute;
+        top: 0;
+        right: -33.3333%; /*change this with javascript in the future*/
+        z-index: -1;
+        display: block;
+        visibility: visible;
+    }
+    /* left or forward direction */
+    .carousel-custom .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+        position: relative;
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
+    }
+    /* right or prev direction //t - previous slide direction last item animation fix */
+    .carousel-custom .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+        position: relative;
+        transform: translate3d(100%, 0, 0);
+        visibility: visible;
+        display: block;
+        visibility: visible;
+    }
+
+    .carousel-control-next {
+        right: -6%;
+    }
+
+    .carousel-control-prev {
+        left: -6%;
+    }
+
+    .carousel-custom .carousel-control-prev-icon,
+    .carousel-custom .carousel-control-next-icon {
+        height: 100px;
+        width: 33px;
+        outline: black;
+        background-size: 100%, 100%;
+        /*border-radius: 50%;*/
+        /*border: 1px solid #d6cbcb;*/
+        background-image: none;
+        background-color: #efefef;
+    }
+
+        .carousel-custom .carousel-control-next-icon:after {
+            content: '>';
+            font-size: 55px;
+            color: #FFFFFF;
+        }
+
+        .carousel-custom .carousel-control-prev-icon:after {
+            content: '<';
+            font-size: 55px;
+            color: #FFFFFF;
+        }
+
+    /*End custom form 3 items*/
 }
 
 .section-news .carousel .carousel-inner img {
