--- a/ImmiCanada/Views/Component/Works.cshtml
+++ b/ImmiCanada/Views/Component/Works.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    @model List<ImmiCanada.Entities.Work>    
+    @model List<ImmiCanada.Entities.Work>
 }
-@{ 
+@{
     string GetWorkDetailUrl(ImmiCanada.Entities.Work work)
     {
         return convertToUnSign2(string.Format("/viec-lam-canada/{0}/{1}",
@@ -25,6 +25,7 @@
         sb = sb.Replace('đ', 'd');
         return (sb.ToString().Normalize(System.Text.NormalizationForm.FormD));
     }
+    int count = 0;
 }
 @{
     if (Model.Count > 0)
@@ -35,46 +36,137 @@
             </div>
         </div>
         <div class="row pad-top40px works-container">
-            @foreach (var work in Model)
-            {
-                <div class="col-sm-4 mar-bottom30px" data-aos="zoom-in-down">
-                    <div class="card float-right card-highlight text-right">
-                        <img src="@work.Base64Image" class="card-img-top" alt="Card image cap" style="height: 230px" />
-                        <div class="card-body pos-rel text-left min-height210px remove-paddingbottom ">
-                            <div class="work-item-main-title font-size14px">@work.Title</div>
-                            <hr />
-                            <div class="row mar-top10px mar-bottom10px">
-                                <div class="col-sm-6 text-left">
-                                    <i class="fa fa-usd" aria-hidden="true"></i><strong>Mức lương</strong>
+            @*@foreach (var work in Model)
+                {
+                    <div class="col-sm-4 mar-bottom30px" data-aos="zoom-in-down">
+                        <div class="card float-right card-highlight text-right">
+                            <img src="@work.Base64Image" class="card-img-top" alt="Card image cap" style="height: 230px" />
+                            <div class="card-body pos-rel text-left min-height210px remove-paddingbottom ">
+                                <div class="work-item-main-title font-size14px">@work.Title</div>
+                                <hr />
+                                <div class="row mar-top10px mar-bottom10px">
+                                    <div class="col-sm-6 text-left">
+                                        <i class="fa fa-usd" aria-hidden="true"></i><strong>Mức lương</strong>
+                                    </div>
+                                    <div class="col-sm-6 text-right">@work.Income</div>
                                 </div>
-                                <div class="col-sm-6 text-right">@work.Income</div>
-                            </div>
-                            <div class="row mar-top10px mar-bottom10px">
-                                <div class="col-sm-6 text-left">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i><strong>Yêu cầu ngôn ngữ</strong>
+                                <div class="row mar-top10px mar-bottom10px">
+                                    <div class="col-sm-6 text-left">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i><strong>Yêu cầu ngôn ngữ</strong>
+                                    </div>
+                                    <div class="col-sm-6 text-right">@work.Language</div>
                                 </div>
-                                <div class="col-sm-6 text-right">@work.Language</div>
-                            </div>
-                            <div class="row mar-top10px mar-bottom10px">
-                                <div class="col-sm-6 text-left">
-                                    <i class="fa fa-calendar-check-o" aria-hidden="true"></i><strong>Kinh nghiệm</strong>
+                                <div class="row mar-top10px mar-bottom10px">
+                                    <div class="col-sm-6 text-left">
+                                        <i class="fa fa-calendar-check-o" aria-hidden="true"></i><strong>Kinh nghiệm</strong>
+                                    </div>
+                                    <div class="col-sm-6 text-right">@work.Experience</div>
                                 </div>
-                                <div class="col-sm-6 text-right">@work.Experience</div>
-                            </div>
-                            <div class="row mar-top10px">
-                                <div class="col-sm-6 text-left">
-                                    <i class="fa fa-university" aria-hidden="true"></i><strong>Yêu cầu bằng cấp</strong>
+                                <div class="row mar-top10px">
+                                    <div class="col-sm-6 text-left">
+                                        <i class="fa fa-university" aria-hidden="true"></i><strong>Yêu cầu bằng cấp</strong>
+                                    </div>
+                                    <div class="col-sm-6 text-right">@work.Certificate</div>
                                 </div>
-                                <div class="col-sm-6 text-right">@work.Certificate</div>
                             </div>
-                        </div>
-                        <div class="works-form-footer text-center">
-                            <hr />
-                            <input type="button" id="btnJoinUrban" value="XEM CHI TIẾT" class="btn-join mar-bottom30px" onclick="javascript: window.location.href = '@GetWorkDetailUrl(work)'" />
+                            <div class="works-form-footer text-center">
+                                <hr />
+                                <input type="button" id="btnJoinUrban" value="XEM CHI TIẾT" class="btn-join mar-bottom30px" onclick="javascript: window.location.href = '@GetWorkDetailUrl(work)'" />
+                            </div>
                         </div>
                     </div>
+                }*@
+
+
+
+            <div id="carousel-custom" class="carousel slide carousel-custom" data-pause="hover">
+                <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                    @foreach (var work in Model)
+                    {
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-4  mar-bottom30px @(count == 0 ? "active" : string.Empty)">
+                            <div class="mar-bottom30px" data-aos="zoom-in-down">
+                                <div class="card float-right card-highlight text-right">
+                                    <img src="@work.Base64Image" class="card-img-top" alt="Card image cap" style="height: 230px" />
+                                    <div class="card-body pos-rel text-left min-height210px remove-paddingbottom ">
+                                        <div class="work-item-main-title font-size14px">@work.Title</div>
+                                        <hr />
+                                        <div class="row mar-top10px mar-bottom10px">
+                                            <div class="col-sm-6 text-left">
+                                                <i class="fa fa-usd" aria-hidden="true"></i><strong>Mức lương</strong>
+                                            </div>
+                                            <div class="col-sm-6 text-right">@work.Income</div>
+                                        </div>
+                                        <div class="row mar-top10px mar-bottom10px">
+                                            <div class="col-sm-6 text-left">
+                                                <i class="fa fa-map-marker" aria-hidden="true"></i><strong>Yêu cầu ngôn ngữ</strong>
+                                            </div>
+                                            <div class="col-sm-6 text-right">@work.Language</div>
+                                        </div>
+                                        <div class="row mar-top10px mar-bottom10px">
+                                            <div class="col-sm-6 text-left">
+                                                <i class="fa fa-calendar-check-o" aria-hidden="true"></i><strong>Kinh nghiệm</strong>
+                                            </div>
+                                            <div class="col-sm-6 text-right">@work.Experience</div>
+                                        </div>
+                                        <div class="row mar-top10px">
+                                            <div class="col-sm-6 text-left">
+                                                <i class="fa fa-university" aria-hidden="true"></i><strong>Yêu cầu bằng cấp</strong>
+                                            </div>
+                                            <div class="col-sm-6 text-right">@work.Certificate</div>
+                                        </div>
+                                    </div>
+                                    <div class="works-form-footer text-center">
+                                        <hr />
+                                        <input type="button" id="btnJoinUrban" value="XEM CHI TIẾT" class="btn-join mar-bottom30px" onclick="javascript: window.location.href = '@GetWorkDetailUrl(work)'" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        count++;
+                    }
                 </div>
-            }
+                <a class="carousel-control-prev" href="#carousel-custom" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-custom" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+
+            </div>
+
         </div>
     }
 }
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        var totalItems = $('.carousel-custom .carousel-item').length;
+        if (totalItems <= 3) {
+            $("a.carousel-control-next,a.carousel-control-prev").addClass("hide");
+            $(".carousel-custom").carousel('pause')
+        }
+        else {
+            $('.carousel-custom').on('slide.bs.carousel', function (e) {
+                var $e = $(e.relatedTarget);
+                var idx = $e.index();
+                var itemsPerSlide = 4;
+                if (idx >= totalItems - (itemsPerSlide - 1)) {
+                    var it = itemsPerSlide - (totalItems - idx);
+                    for (var i = 0; i < it; i++) {
+                        // append slides to end
+                        if (e.direction == "left") {
+                            $('.carousel-custom .carousel-item').eq(i).appendTo('.carousel-custom .carousel-inner');
+                        }
+                        else {
+                            $('.carousel-custom .carousel-item').eq(0).appendTo('.carousel-custom .carousel-inner');
+                        }
+                    }
+                }
+
+            });
+        }
+
+    });
+</script>
