--- a/ImmiCanada/Views/WorkInterface/Detail.cshtml
+++ b/ImmiCanada/Views/WorkInterface/Detail.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 pad-top5px font-size13px">
-                Lượt xem: @Model.NumberOfView | Cấp độ kỹ năng: @Model.Noc.Title | Mã NOC: @Model.WorkNumber | Loại chương trình: @Model.ImmigrationService.ImmigrationServiceType.Name
+                Lượt xem: @Model.NumberOfView | Cấp độ kỹ năng: @Model.Noc.Title | Mã NOC: @Model.WorkNumber | Loại chương trình: @(Model.ImmigrationService.Title == "Non-Available" ? "N/A" : Model.ImmigrationService.ImmigrationServiceType.Name)
             </div>
         </div>
         <hr class="" />
