--- a/ImmiCanada/Views/Works/Index.cshtml
+++ b/ImmiCanada/Views/Works/Index.cshtml
@@ -92,7 +92,7 @@
                 @Html.DisplayFor(modelItem => item.Experience)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Position)
+                @Html.DisplayFor(modelItem => item.Position.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Certificate)
@@ -107,7 +107,7 @@
                 @Html.DisplayFor(modelItem => item.Sex)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Occupation)
+                @Html.DisplayFor(modelItem => item.Occupation.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
