--- a/ImmiCanada/Views/Works/Create.cshtml
+++ b/ImmiCanada/Views/Works/Create.cshtml
@@ -20,6 +20,14 @@
             <label>Tên công việc</label>
             @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+        </div>        
+    </div>
+
+    <div class="form-group row">
+        <div class="col-6">
+            <label>Chương trình</label>
+            @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
         </div>
         <div class="col-6">
             <label>Yêu cầu ngôn ngữ</label>
@@ -30,17 +38,9 @@
 
     <div class="form-group row">
         <div class="col-6">
-            <label>Chương trình</label>
-            @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group row">
-        <div class="col-6">
             <label>NOC</label>
             @Html.DropDownList("NocId", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })            
+            @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })
         </div>
         <div class="col-6">
             <label>Mã NOC</label>
@@ -65,8 +65,8 @@
     <div class="form-group row">
         <div class="col-6">
             <label>Chức vụ</label>
-            @Html.EditorFor(model => model.Position, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger" })
+            @Html.DropDownList("PositionId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.PositionId, "", new { @class = "text-danger" })
         </div>
         <div class="col-6">
             <label>Yêu cầu bằng cấp</label>
@@ -96,8 +96,8 @@
         </div>
         <div class="col-6">
             <label>Nghành nghề</label>
-            @Html.EditorFor(model => model.Occupation, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Occupation, "", new { @class = "text-danger" })
+            @Html.DropDownList("OccupationId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.OccupationId, "", new { @class = "text-danger" })
         </div>
     </div>
 
