--- a/ImmiCanada/Views/Works/Edit.cshtml
+++ b/ImmiCanada/Views/Works/Edit.cshtml
@@ -21,12 +21,7 @@
                 <label>Tên công việc</label>
                 @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-            </div>
-            <div class="col-6">
-                <label>Yêu cầu ngôn ngữ</label>
-                @Html.EditorFor(model => model.Language, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Language, "", new { @class = "text-danger" })
-            </div>
+            </div>            
         </div>
 
         <div class="form-group row">
@@ -34,6 +29,11 @@
                 <label>Chương trình</label>
                 @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Yêu cầu ngôn ngữ</label>
+                @Html.EditorFor(model => model.Language, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Language, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -66,8 +66,8 @@
         <div class="form-group row">
             <div class="col-6">
                 <label>Chức vụ</label>
-                @Html.EditorFor(model => model.Position, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger" })
+                @Html.DropDownList("PositionId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PositionId, "", new { @class = "text-danger" })
             </div>
             <div class="col-6">
                 <label>Yêu cầu bằng cấp</label>
@@ -97,8 +97,8 @@
             </div>
             <div class="col-6">
                 <label>Nghành nghề</label>
-                @Html.EditorFor(model => model.Occupation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Occupation, "", new { @class = "text-danger" })
+                @Html.DropDownList("OccupationId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.OccupationId, "", new { @class = "text-danger" })
             </div>
         </div>
 
