--- a/ImmiCanada/Views/Shared/_Layout.cshtml
+++ b/ImmiCanada/Views/Shared/_Layout.cshtml
@@ -228,7 +228,7 @@
                 </div>
                 <div class="menu-item"><a href="/viec-lam-canada">VIỆC LÀM</a></div>
                 <div class="menu-item"><a href="#">TẠI SAO CHỌN CHÚNG TÔI</a></div>
-                <div class="menu-item"><a href="#">BẢN TIN NHẬP CƯ</a></div>
+                <div class="menu-item"><a href="/NewsInterface/Index">BẢN TIN NHẬP CƯ</a></div>
                 <div class="menu-item"><a href="#">ĐÁNH GIÁ MIỄN PHÍ</a></div>
             </div>
             <div class="row main-banner ">
